--- a/MeshViews/MeshSetupSuccessView.xib
+++ b/MeshViews/MeshSetupSuccessView.xib
@@ -95,7 +95,7 @@
                     </constraints>
                     <viewLayoutGuide key="safeArea" id="LOc-m6-5db"/>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="13a-XW-hyP" customClass="MeshSetupButton" customModule="Particle" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="13a-XW-hyP" customClass="ParticleButton" customModule="Particle" customModuleProvider="target">
                     <rect key="frame" x="20" y="440" width="335" height="40"/>
                     <color key="backgroundColor" red="0.1137254902" green="0.68627450980000004" blue="0.92549019610000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
@@ -110,7 +110,7 @@
                         <action selector="setupAnotherButtonTapped:" destination="-1" eventType="touchUpInside" id="l1n-lr-Nsr"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eWi-zW-8Qy" customClass="MeshSetupButton" customModule="Particle" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eWi-zW-8Qy" customClass="ParticleButton" customModule="Particle" customModuleProvider="target">
                     <rect key="frame" x="20" y="577" width="335" height="40"/>
                     <color key="backgroundColor" red="0.1137254902" green="0.68627450980000004" blue="0.92549019610000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
