--- a/MeshViews/Cells/MeshSetupWifiNetworkCell.xib
+++ b/MeshViews/Cells/MeshSetupWifiNetworkCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -48,12 +48,15 @@
                 <constraints>
                     <constraint firstItem="lPi-S0-iIU" firstAttribute="centerY" secondItem="txs-2u-e31" secondAttribute="centerY" id="6jT-G1-rWZ"/>
                     <constraint firstItem="lPi-S0-iIU" firstAttribute="leading" secondItem="T9q-e0-8tb" secondAttribute="leading" constant="15" id="Flq-lr-K1k"/>
-                    <constraint firstItem="T9q-e0-8tb" firstAttribute="trailing" secondItem="8Ux-ub-Fs6" secondAttribute="trailing" constant="5" id="GGU-tB-VAg"/>
+                    <constraint firstItem="T9q-e0-8tb" firstAttribute="trailing" secondItem="8Ux-ub-Fs6" secondAttribute="trailing" priority="999" constant="5" id="GGU-tB-VAg"/>
                     <constraint firstItem="8Ux-ub-Fs6" firstAttribute="leading" secondItem="lPi-S0-iIU" secondAttribute="trailing" constant="15" id="kLX-Tk-WuO"/>
                     <constraint firstItem="8Ux-ub-Fs6" firstAttribute="centerY" secondItem="lPi-S0-iIU" secondAttribute="centerY" id="xau-tj-J41"/>
                 </constraints>
                 <viewLayoutGuide key="safeArea" id="T9q-e0-8tb"/>
             </tableViewCellContentView>
+            <constraints>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="8Ux-ub-Fs6" secondAttribute="trailing" constant="15" id="l2a-GE-NP7"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="RN9-NS-AsX"/>
             <connections>
                 <outlet property="cellAccessoryImageView" destination="qIC-Dq-Srj" id="POp-M0-k4a"/>
